--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -12,11 +12,21 @@ textarea {
   padding: 10px;
 }
 
+/* check the title area */
+bigTitle {
+ text-align: center;
+  background-color: transparent;
+  color: black;
+  border-radius: 0;
+  border-bottom: 10px solid black;
+} 
+
 .description {
   white-space: pre-wrap;
 }
 
 .time-block {
+  text-align: center;
   border-radius: 15px;
 }
 
