--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -12,7 +12,7 @@ textarea {
   padding: 10px;
 }
 
-/* check the title area */
+/* style the title area */
 .bigTitle {
  text-align: center;
   background-color: transparent;
@@ -32,8 +32,6 @@ textarea {
 
 .row {
   border-top: 1px solid white;
-  /* height: 80px;
-  border-top: 1px solid white; */
 }
 
 .hour {
